--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "service",
+  "name": "mauem",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,7 +11,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "recoil": "^0.7.7",
     "router": "^1.3.8",
     "tailwindcss": "^3.4.3",
@@ -46,5 +46,4 @@
   "main": "index.js",
   "author": "",
   "license": "ISC"
-  
 }
